# monke

./: Made_words.txt  Words.txt  main.py  pyproject.toml
