[tool.poetry]
name = "help"
version = "0.1.0"
description = ""
authors = ["No"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
nltk = "^3.7"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
